--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "wasm-pack build --target web --out-name wasm --out-dir ./static",
+    "build": "wasm-pack build --target web --out-name wasm --out-dir ./static/build",
     "start": "npx serve ./static"
   },
   "keywords": [
