--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 yew = { version = "0.17", features = ["services"] }
+yew-router = "0.14.0"
 wasm-bindgen = "0.2.67"
+web-sys = "0.3.44"
+serde = "1.0.115"
+serde_json = "1.0.57"
