--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ crate-type = ["cdylib", "rlib"]
 yew = { version = "0.17", features = ["services"] }
 yew-router = "0.14.0"
 wasm-bindgen = "0.2.67"
-web-sys = "0.3.44"
+web-sys = { version = "0.3.44", features = ["Window", "Storage"] }
 serde = "1.0.115"
 serde_json = "1.0.57"
