--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ wasm-bindgen = "0.2.67"
 web-sys = { version = "0.3.44", features = ["Window", "Storage"] }
 serde = "1.0.115"
 serde_json = "1.0.57"
+yewi = { git = "https://github.com/ericandre615/yewi" }
